--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GLAB 308.A.2.1</title>
+    <title>GLAB 308A.2.1</title>
 
     <link ref="stylesheet" href="./style.css">
 </head>
