--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link ref="stylesheet" href="./style.css">
 </head>
 <body>
-    <h1>An Object-Oriented Adventure Let's Go!!!</h1>
+    <h1>An Object-Oriented Adventure Let's Go!</h1>
     
 
     <script src="./script.js"></script>
